--- a/FORMELSAMMLUNG.tex
+++ b/FORMELSAMMLUNG.tex
@@ -130,7 +130,44 @@ Erweitern:
 \end{align*}
 
 \subsection{Klammerrechnung}
+
+Addition und Subtraction von Summanden:
+\begin{align*}
+ a + (b \pm c) = (a + b) \pm c = a + b \pm c \\
+ a - (b \pm c) =  a - b \mp c
+\end{align*}
+
+Multiplikation mit Summe:
+\begin{align*}
+ a (b \pm c) =  a \cdot (b \pm c) = a \cdot b \pm a \cdot c = ab \pm ac
+\end{align*}
+
+Multiplikation von Summen:
+\begin{align*}
+ (a+b)(b+c) = a \cdot c +a \cdot d +b \cdot c +b \cdot d = ac +ad +bc +bd 
+\end{align*}
+
+Division einer Summe:
+\begin{align*}
+ (a \pm b):(c) = \frac{a \pm b}{c} = \frac{a}{c} \pm  \frac{b}{c} 
+\end{align*}
+
 \subsection{Binomische Formeln}
+\begin{align*}
+(a+b)^ 2 = a^ 2 + 2ab + b^2\\
+(a-b)^ 2 =  a^ 2 - 2ab + b^2 \\
+(a+b)(a-b) = a^ 2 - b^2
+\end{align*}
+ 
+ 
+$a^ 2 + b^2 $ (reell nicht zerlegbar!) 
+
+\begin{align*} 
+a^ 3 + b^3 = (a+b)( a^ 2 - ab + b^2) \\
+a^ 3 - b^3 = (a-b)( a^ 2 + ab + b^2)
+\end{align*}
+
+
 \section{Algebra}
 \section{Relationen und Funktionen}
 \section{Folgen und Reihen}
