--- a/FORMELSAMMLUNG.tex
+++ b/FORMELSAMMLUNG.tex
@@ -257,7 +257,30 @@ Potenz von 0: $ 0^n = 0 $ ;  $n \in\{n | n > 0\}$\\
 Potenz 0 von 0: $ 0^0 = foobar $ 
 
 \subsection{Wurzeln}
+
+Radizieren eines Produktes $\sqrt[n]{ab} = \sqrt[n]{a} \cdot \sqrt[n]{b}$
+
+Radizieren eines Quotienten $\sqrt[n]{\frac{a}{b} } = \frac{\sqrt[n]{a}}{\sqrt[n]{b}} $
+
+Radizieren einer Potenz $\sqrt[n]{ a^m} = (\sqrt[n]{ a})^m = a^{\frac{m}{n}}$
+
+Radizieren einer Wurzel $\sqrt[n]{\sqrt[m]{a}}  = \sqrt[n \cdot m]{a} = \sqrt[m]{\sqrt[n]{a}}$
+
+
 \subsection{Logarithmen}
+$$ b^x =n \longleftrightarrow x = \log_b n$$
+
+Logarithmieren eines Produktes $\log_b (m \cdot n) = \log_b m + \log_b n $ 
+
+Logarithmieren eines Quotienten $\log_b (\frac{m}{n}) = \log_b m - \log_b n  $ 
+
+Logarithmieren einer Potenz $\log_b (m^n) =  n \cdot \log_b m $ 
+
+Logarithmieren einer Wurzel $\log_b (\sqrt[n]{m}) =  \frac{1}{n} \cdot \log_b m $ 
+
+Logarithmentsysteme \\
+$\log_{10} n = \lg n $\\
+$\log_{e} n = \ln n $
 
 
 \section{Algebra}
