--- a/FORMELSAMMLUNG.tex
+++ b/FORMELSAMMLUNG.tex
@@ -3,11 +3,8 @@
 % add CC license
 % use Command+Shift+Click in the PDF to jump to the source code line when using TeXShop
 
-% Autor:
 \author{Dirk~Messetat}
-% Datum: heute
 \date{\today}
-% Versionsnummer:
 \newcommand{\versionsnummer}{1.0.0-SNAPSHOT}
 
 % URL:
@@ -17,35 +14,51 @@
 \title{Mathematische \\
 FORMELSAMMLUNG \\[2ex] \small Version: \versionsnummer \\[2ex] \texttt{ \url{http://github.com/codirk/formelsamlung} }\\
  \hfill\break
-Klasse 5-13 (auch für Bayern ;-)
+Klasse 5-13
 } 
-%
-% DIN A5 Seite:
-\documentclass[12pt,a4paper,fleqn,twoside,pdf,final]{article}
-% Seitengeometrie festlegen:
+
+\documentclass[12pt,a4paper,fleqn,twoside,pdf,final]{scrartcl}
+%\documentclass[12pt,a4paper,fleqn,twoside,pdf,final]{article}
+%\documentclass{scrartcl}
+
+
+\usepackage{graphicx}
+
+
+\usepackage[ngerman]{babel}
+\usepackage[utf8]{inputenc}
+% \usepackage[T1]{fontenc}
+
 
 \setlength{\parindent}{0in}
 \setlength{\mathindent}{0pt}
 
-
 \usepackage{amsfonts} 
 
 
-\usepackage[utf8]{inputenc}
-
 \usepackage{helvet}
-\usepackage{ngerman}
 \usepackage{curves}
-\usepackage{latexsym} % ein paar Symbole
-\usepackage{textcomp} % ein paar Symbole
-\usepackage[dvips]{rotating} % für rotate-Befehl
+\usepackage{latexsym} 
+\usepackage{textcomp} 
+
+% damages  the pictures 
+%\usepackage[dvips]{rotating}
+
 \usepackage{geometry}
+
 \geometry{left=0.5cm,textwidth=19cm,top=1.0cm,textheight=26cm}
 
 \usepackage{array}
 
-
 %\usepackage{creativecommons}
+\usepackage[hidelinks]{hyperref}
+
+\usepackage[
+    type={CC},
+    modifier={by-nc-sa},
+    version={3.0},
+]{doclicense}
+
 
 % striked out text
 \usepackage[normalem]{ulem}
@@ -64,9 +77,38 @@ Klasse 5-13 (auch für Bayern ;-)
 % newcommand
 \newcommand{\stkout}[1]{\ifmmode\text{\cancel{\ensuremath{#1}}}\else\sout{#1}\fi}
 
+\usepackage{float}
+\usepackage{subfig}
+
+\usepackage{framed}
+\usepackage{listings}
+\usepackage{graphicx}
+\usepackage{textcomp}
+\usepackage{tikz}
+\usepackage{tikz-qtree}
+\usetikzlibrary{shapes,automata,arrows}
+\usepackage{pgfplots}
+\usepackage{color}
+
+\usetikzlibrary{calc,angles}
+\usetikzlibrary{shapes,arrows,intersections}
+\usetikzlibrary{matrix,fit,calc,trees,positioning,arrows,chains,shapes.geometric,shapes,angles}
+\usetikzlibrary{quotes}
+
+%\usetikzlibrary{calc,angles,quotes}
+\tikzset{square/.style= { to path={ let \p1=(\tikztostart), \p2=(\tikztotarget),
+  \p3=($(\p2)!1!90:(\p1)$), \p4=($(\p1)!1!-90:(\p2)$) in
+  (\p2) foreach \i in {3,4,1,2} {--node[auto=right]{#1} (\p\i)}}}}
+
+\usepackage{siunitx}
+
 
 
 \begin{document}
+
+
+
+
 \maketitle
 \thispagestyle{empty}
 
@@ -75,12 +117,16 @@ Klasse 5-13 (auch für Bayern ;-)
 \vfill
  
 
-\begin{flushright}
-    \copyright  2021 Dirk Messetat git [at] messetat [dot] com. \\
-    This work is licensed under a Creative Commons Attribution- ShareAlike 3.0 License.
-    To view a copy of this license visit:
-     \url{http://creativecommons.org/licenses/by-sa/3.0/legalcode}.
-\end{flushright}
+%\begin{flushright}
+%    \copyright  2021 Dirk Messetat git [at] messetat [dot] com. \\ 
+%    This work is licensed under a Creative Commons Attribution- ShareAlike 3.0 License.
+%    To view a copy of this license visit:
+%     \url{http://creativecommons.org/licenses/by-sa/3.0/legalcode}.
+%\end{flushright}
+
+
+\doclicenseThis
+
 
 \pagebreak
 
@@ -98,262 +144,25 @@ Klasse 5-13 (auch für Bayern ;-)
 \small{Dieses Dokument wurde mit \LaTeX{} gesetzt.}
 \end{center}
 
-%
 \newpage
-%
 
 \clearpage
 \pagenumbering{arabic} 
 
-
-
-\section{Mengenlehre}
-
-% \begin{align*}
-% [a;b] = TODO \{x| a <  x \leq b, x \in \mathbb{R}\} \\
-% ]a;b[ = TODO \{x| a <  x \leq b, x \in \mathbb{R}\} \\
-% [a;b[ = TODO \{x| a <  x \leq b, x \in \mathbb{R}\} \\
-% ]a;b] = TODO \{x| a <  x \leq b, x \in \mathbb{R}\}
-% \end{align*}
-
-\section{Arithmetik}
-\subsection{Brüche}
-
-Kürzen:
-\begin{align*}
-\frac{ac}{bc} = \frac{a \cdot c}{b \cdot c} =  \frac{a \cdot c : c }{b \cdot c : c} =  \frac{a \cdot 1 }{b \cdot 1 } =  \frac{a \cdot \stkout{c} }{b \cdot \stkout{c}}  =  \frac{a}{b}  
-\end{align*}
-
-Erweitern:
-\begin{align*}
-\frac{a}{b} =  \frac{ac}{bc} =   \frac{a \cdot c}{b \cdot c} 
-\end{align*}
-
-Addition und Subtraktion gleichnamiger Brüche:
-
-\begin{align*}
-  \frac{a}{c} \pm \frac{b}{c} =  \frac{a \pm b}{c} 
-\end{align*}
-
-Addition und Subtraktion nicht gleichnamiger Brüche:
-
-\begin{align*}
-\frac{a}{b} \pm \frac{c}{d} = \frac{ad}{bd} \pm \frac{cb}{db} = \frac{ad \pm bc}{db} \longrightarrow \frac{a}{b} \pm c = \frac{a}{b} \pm \frac{c}{1} = \frac{a \pm bc}{b} 
-\end{align*}
-
-Gemischte Brüche
-\begin{align*}
-  c\frac{a}{b} = c \cdot \frac{a}{b}= \frac{a}{b} \cdot c= \frac{a}{b}c
-\end{align*}
-Achtung! : Addition bei Zahlen
-\begin{align*}
-2\frac{1}{3} = 2+\frac{1}{3} =  \frac{6}{3} + \frac{1}{3} = \frac{7}{3} 
-\end{align*}
-
-
-Multiplikation Bruch mit ganzer Zahl:
-
-\begin{align*}
-\frac{a}{b} \cdot c = \frac{a}{b}  \cdot \frac{c}{1}  = \frac{a \cdot c}{b \cdot 1} = \frac{a \cdot c}{b}  = \frac{a c}{b} 
-\end{align*}
-
-Division Bruch mit ganzer Zahl (Multiplikation mit Kehrwert):
-\begin{align*}
-\frac{a}{b} : c = \frac{a}{b} : \frac{c}{1} =  \frac{a}{b} \cdot \frac{1}{c} = \frac{a}{b \cdot c}  = \frac{a}{b c} 
-\end{align*}
-
-Division Bruch mit Bruch (Multiplikation mit Kehrwert):
-\begin{align*}
-\frac{a}{b} : \frac{c}{d} = \frac{a}{b}  \cdot \frac{d}{c} = \frac{a \cdot d }{b \cdot c} = \frac{a d }{b c} 
-\end{align*}
-
-
-
-
+\input{sections/01_Mengenlehre.tex}
 \pagebreak
-\subsection{Klammerrechnung}
+\input{sections/02_Arithmetik.tex}
+\input{sections/03_Algebra.tex}
+\pagebreak
+\input{sections/04_Relationen_und_Funktionen.tex}
+\input{sections/05_Folgen_und_Reihen.tex}
+\input{sections/06_Differenzialrechnung.tex}
+\input{sections/07_Integralrechnung.tex}
+\input{sections/08_Geometrie.tex}
+\input{sections/09_Vectorrechung.tex}
+\input{sections/10_Matrixrechnung.tex}
+\input{sections/11_Stochastik.tex}
 
-Addition von Summanden (assoziativ):
-\begin{align*}
- a + (b \pm c) = (a + b) \pm c = a + b \pm c 
-\end{align*}
-Subtraction von Summanden:
-\begin{align*}
- a - (b \pm c) = a + (-1) \cdot  (b \pm c) = a + (  (-1) \cdot  b \pm  (-1) \cdot c)  =  a - b \mp c
-\end{align*}
-
-
-Multiplikation mit Summe:
-\begin{align*}
- a (b \pm c) =  a \cdot (b \pm c) = a \cdot b \pm a \cdot c = ab \pm ac
-\end{align*}
-Bzw.
-\begin{align*} 
- \sum_{i=1}^n ax_{i}  = a \cdot  \sum_{i=1}^n x_{i} = a  \sum_{i=1}^n x_{i}
- \end{align*}
-
-
-Multiplikation von Summen:
-\begin{align*}
- (a+b)(b+c) = a \cdot c +a \cdot d +b \cdot c +b \cdot d = ac +ad +bc +bd 
-\end{align*}
-
-Division einer Summe:
-\begin{align*}
- (a \pm b):(c) = \frac{a \pm b}{c} = \frac{a}{c} \pm  \frac{b}{c} 
-\end{align*}
-
-\subsection{Binomische Formeln}
-\begin{align*}
-(a+b)^ 2 = a^ 2 + 2ab + b^2\\
-(a-b)^ 2 =  a^ 2 - 2ab + b^2 \\
-(a+b)(a-b) = a^ 2 - b^2
-\end{align*}
- 
-
-\begin{align*} 
-n! = 1\cdot2\cdot3...(n-1)n= \prod_{k = 1}^{n}k    (n \in \mathbb{N})
-\end{align*}
- 
- 
-$a^ 2 + b^2 $ (reell nicht zerlegbar!) 
-
-\begin{align*} 
-a^ 3 + b^3 = (a+b)( a^ 2 - ab + b^2) \\
-a^ 3 - b^3 = (a-b)( a^ 2 + ab + b^2)
-\end{align*}
-
-
-\begin{tabular}{>{$n=}l<{$\hspace{12pt}}*{14}{c}}
-0 &&&&&&&1&&&&&&& $(a+b)^ 0=1$\\
-1 &&&&&&1&&1&&&&&& $(a+b)^ 1=1a+1b$ \\
-2 &&&&&1&&2&&1&&&&&  $(a+b)^ 2=1a^ 2+2ab+1b^2$\\
-3 &&&&1&&3&&3&&1&&&& $(a+b)^ 3=1a^3+3a^2 b+3ab^2+1b^3$\\
-4 &&&1&&4&&6&&4&&1&&& $(a+b)^ 4=a^4+4a^3 b+6a^2b^2+4ab^3+b^4$\\
-5 &&1&&5&&10&&10&&5&&1&&\\
-6 &1&&6&&15&&20&&15&&6&&1&
-\end{tabular}
-
-Binominalkoeffizienten (n über k)
-\begin{align*}
-\binom{n}{k}= \frac{n(n-1)(n-2)...[n-(k-1)] }{k!} =  \frac{n!}{k!(n-k)!}
-\end{align*}
-
-\subsection{Potenzen}
-Potenz eines Produktes gleicher Grundzahl: 
-$a^m \cdot a^n = a^{m+n}$
-
-Potenz einer Division/Bruches gleicher Grundzahl: $ \frac{a^m}{a^n} = a^{m-n}$ \\
-$\longrightarrow$ $ a^0 =  \frac{a^n}{a^n} =   \frac{ \cancel{a^n} \cdot 1}{ \cancel{a^n} \cdot 1} = a^{n-n}  = 1$  ; $a \in \{a| a \neq 0\}$ \\
-$\longrightarrow$ negative Exponenten: $ a^{-n} =  a^{0-n} =  \frac{a^0}{a^n}  =  \frac{1}{a^n} $ \\
-
-Potenz eines Produktes mit gleichen Exponenten: $ {a^n}{b^n} = (ab)^{n}$ 
-
-Potenz einer Division/Bruches mit gleichen Exponenten: $ \frac{a^n}{b^n} = (\frac{a}{b}) ^n$ 
-
-Potenz einer Potenz: $ (a^m)^n = a^{m^n} = a^{m \cdot n}$ 
-
-Potenz von 0: $ 0^n = 0 $ ;  $n \in\{n | n > 0\}$\\
-Potenz 0 von 0: $ 0^0 = foobar $ 
-
-\subsection{Wurzeln}
-
-Radizieren eines Produktes $\sqrt[n]{ab} = \sqrt[n]{a} \cdot \sqrt[n]{b}$
-
-Radizieren eines Quotienten $\sqrt[n]{\frac{a}{b} } = \frac{\sqrt[n]{a}}{\sqrt[n]{b}} $
-
-Radizieren einer Potenz $\sqrt[n]{ a^m} = (\sqrt[n]{ a})^m = a^{\frac{m}{n}}$
-
-Radizieren einer Wurzel $\sqrt[n]{\sqrt[m]{a}}  = \sqrt[n \cdot m]{a} = \sqrt[m]{\sqrt[n]{a}}$
-
-
-\subsection{Logarithmen}
-$$ b^x =n \longleftrightarrow x = \log_b n$$
-
-Logarithmieren eines Produktes $\log_b (m \cdot n) = \log_b m + \log_b n $ 
-
-Logarithmieren eines Quotienten $\log_b (\frac{m}{n}) = \log_b m - \log_b n  $ 
-
-Logarithmieren einer Potenz $\log_b (m^n) =  n \cdot \log_b m $ 
-
-Logarithmieren einer Wurzel $\log_b (\sqrt[n]{m}) =  \frac{1}{n} \cdot \log_b m $ 
-
-Logarithmentsysteme \\
-$\log_{10} n = \lg n $\\
-$\log_{e} n = \ln n $
-
-
-\section{Algebra}
-\subsection{Gesetze}
-Kommutativgesetz:Vertauschungsgesetz \\
-Assoziativgesetz: Verknüpfungsgesetz oder auch Verbindungsgesetz (Klammern verschieben) \\
-Distributivgesetz: Verteilungsgesetze (Ausklammern/Ausmultiplizieren)
-
-\subsection{Ungleichungen}
-\subsection{Gleichungen}
-\subsection{Linieare Gleichungen}
-\subsection{Determinanten}
-\subsection{Quadratische Glechungen}
-\subsection{Fundamentalsatz der Algebra}
-Ein Polynom n-ten Grades lässt sich maximal in n Linearfaktoren zerlegen und hat maximal n Lösungen.
-
-\section{Relationen und Funktionen}
-\section{Folgen und Reihen}
-\section{Differenzialrechnung}
-\section{Integralrechnung}
-\section{Geometrie}
-
-
-
-\subsection{Planimetrie}
-\subsection{Stereometrie}
-\subsection{Trigonometrie}
-\subsection{Geniometrie}
-\section{Vectorrechung}
-$\vec{B}$
-\section{Matrixrechnung}
-
- 
- $$
-\Sigma=\left[
-\begin{array}{ccc}
-   \sigma_{11} & \cdots & \sigma_{1n} \\
-   \vdots & \ddots & \vdots \\
-   \sigma_{n1} & \cdots & \sigma_{nn}
-\end{array}
-\right]
-$$
-
- $$
-\Sigma=\left(
-\begin{array}{ccc}
-   \sigma_{11} & \cdots & \sigma_{1n} \\
-   \vdots & \ddots & \vdots \\
-   \sigma_{n1} & \cdots & \sigma_{nn}
-\end{array}
-\right)
-$$
-
-
-\newcommand*{\rowvec}[1]{\left( #1\right)}
-\newcommand*{\rowvecVert}[1]{\left(\begin{array}{c}#1\end{array}\right)}
-
-$$
-\rowvec{1,2,3}
-$$
-
-$$
-\left( 
-\begin{array}{c}
-1 \\ 2 \\ 3
-\end{array}
-\right)
-$$
-$$
-\vec{B} = \rowvecVert{1 \\ 2 \\ 3}
-$$
-
-\section{Statistik}
 
 \section{Konstanten}
 \begin{align*} 
