--- a/FORMELSAMMLUNG.tex
+++ b/FORMELSAMMLUNG.tex
@@ -64,6 +64,7 @@ Klasse 5-13
 \usepackage[normalem]{ulem}
 \usepackage{cancel}
 
+\input{FORMELSAMMLUNG_flex.tex}
 
 
 \usepackage{amsmath}
@@ -79,16 +80,6 @@ Klasse 5-13
 
 \usepackage{float}
 \usepackage{subfig}
-
-\usepackage{framed}
-\usepackage{listings}
-\usepackage{graphicx}
-\usepackage{textcomp}
-\usepackage{tikz}
-\usepackage{tikz-qtree}
-\usetikzlibrary{shapes,automata,arrows}
-\usepackage{pgfplots}
-\usepackage{color}
 
 \usetikzlibrary{calc,angles}
 \usetikzlibrary{shapes,arrows,intersections}
