folgen und reihen

--- a/sections/05_Folgen_und_Reihen.tex
+++ b/sections/05_Folgen_und_Reihen.tex
@@ -1,3 +1,14 @@
 \section{Folgen und Reihen}
 \subsection{Arithmetische folgen und Reihen}
+
+\begin{align*}
+a_{n+1} - a_n &=d	\\
+a_n &= a_1+(n-1) \cdot d
+ \end{align*}
+\begin{align*}
+         \sum_{n=0}^{n} a_n = \frac{a_0+a_n}{2} \cdot n
+ \end{align*}
+ 
+
+
 \subsection{Geometrische folgen und Reihen}
