--- a/sections/02_Arithmetik.tex
+++ b/sections/02_Arithmetik.tex
@@ -40,7 +40,7 @@ Achtung! : Addition bei Zahlen
 Division Bruch mit Bruch (Multiplikation mit Kehrwert):
 \begin{flalign*}
 \frac{a}{b} : \frac{c}{d}&= \frac{a}{b} \cdot \frac{d}{c}= \frac{a \cdot d }{b \cdot c}= \frac{a d }{b c} \\
-\Rightarrow \frac{a}{b}:c&= \frac{a}{b} : \frac{c}{1}=\frac{a}{b} \cdot \frac{1}{c}=\frac{a}{b \cdot c}  &= \frac{a}{b c} 
+\Rightarrow \frac{a}{b}:c&= \frac{a}{b} : \frac{c}{1}=\frac{a}{b} \cdot \frac{1}{c}=\frac{a}{b \cdot c}  = \frac{a}{b c} 
 \end{flalign*}
 
 
