--- a/sections/03_Algebra.tex
+++ b/sections/03_Algebra.tex
@@ -56,6 +56,9 @@ Lösung: $x_{1,2}= - \frac{p}{2} \pm \sqrt[]{( \frac{p}{2})^2 -q }$
 
 Linearfactoren (Produktform quadratischer Terme): $(x-x_1)\cdot (x-x_2 )=0$
 
-
-\subsection{Fundamentalsatz der Algebra}
-Ein Polynom n-ten Grades lässt sich maximal in n Linearfaktoren zerlegen und hat maximal n Lösungen.
+\subsection{Polynomfunktion n-ten Grades}
+Ein Polynom n-ten Grades lässt sich maximal in n Linearfaktoren zerlegen und hat maximal n Lösungen bzw. hat maximal n Nullstellen.
+\begin{align*}
+f(x) &= a_nx^n+a_{n-1}x^{n-1}+...+a_1x^1+a_0 \\
+p(x) &=a_n(x-n_1)(x-n_2)(x-n_3)...(x-n_N) \textrm{ mit jeweils den Nullstellen } n_k
+\end{align*}
