--- a/sections/08_Geometrie.tex
+++ b/sections/08_Geometrie.tex
@@ -6,12 +6,12 @@
 \subsection{Pythagoras}
 
 
-\begin{figure}[htb]
-\begin{center}
-	\includegraphics[height=1in,width=1in,angle=-90]{sections/08_Geometrie/pythagoras.standalone.pdf}
-\caption{This is a figure.}
-\end{center}
-\end{figure}
+%\begin{figure}[htb]
+%\begin{center}
+%	\includegraphics[height=1in,width=1in,angle=-90]{sections/08_Geometrie/pythagoras.standalone.pdf}
+%\caption{This is a figure.}
+%\end{center}
+%\end{figure}
 
 
 %\begin{figure}
