--- a/sections/05_Folgen_und_Reihen.tex
+++ b/sections/05_Folgen_und_Reihen.tex
@@ -2,13 +2,26 @@
 \subsection{Arithmetische folgen und Reihen}
 
 \begin{align*}
-a_{n+1} - a_n &=d	\\
-a_n &= a_1+(n-1) \cdot d
- \end{align*}
+d &=a_{n+1} - a_n = const. ; n \in \mathbb{N}
+\end{align*}
+
+Arithmetisches Mittel
 \begin{align*}
-         \sum_{n=0}^{n} a_n = \frac{a_0+a_n}{2} \cdot n
- \end{align*}
- 
+    a_n=\frac{a_{n-1}+a_{n+1}}{2}
+\end{align*}
+
+Funktionsforschrift
+\begin{align*}
+    a_n = a_1+(n-1) \cdot d ; d \in \{d|d \neq 0\}
+\end{align*}
+
+Summenformel
+\begin{align*}
+    \sum_{n=1}^{n} a_n &= \frac{a_1+a_n}{2} \cdot n \\
+    &= \sum_{n=1}^{n} a_1 +(n-1) \cdot d \\
+    &= \frac{n}{2}[2a_1+(n-1) \cdot d]
+\end{align*}
+
 
 
 \subsection{Geometrische folgen und Reihen}
