--- a/src/latex/FORMELSAMMLUNG.tex
+++ b/src/latex/FORMELSAMMLUNG.tex
@@ -4,11 +4,11 @@
 % use Command+Shift+Click in the PDF to jump to the source code line when using TeXShop
 
 %\input{HEAD.tex}
-\documentclass{./formulaCollection}
+\documentclass{formulaCollection}
 
 \RequirePackage{formulaCollection}
 
-
+%TODO Print this message in the build
 
 \setlength{\parindent}{0in}
 \setlength{\mathindent}{0pt}
