--- a/src/latex/FORMELSAMMLUNG.tex
+++ b/src/latex/FORMELSAMMLUNG.tex
@@ -8,7 +8,7 @@
 
 \RequirePackage{formulaCollection}
 
-%TODO Print this message in the build
+%TODO Print this message during the build
 
 \setlength{\parindent}{0in}
 \setlength{\mathindent}{0pt}
