--- a/sections/03_Algebra.tex
+++ b/sections/03_Algebra.tex
@@ -43,8 +43,9 @@ $Q^{\prime}(68786979)=9+9+8+8-(7+6+7+6)=34-26=8$
 
 \subsection{Ungleichungen}
 \subsection{Gleichungen}
-\subsection{Linieare Gleichungen}
-\subsection{Determinanten}
+\subsubsection{Linieare Gleichungen}
+\paragraph{Determinanten}
+\paragraph{Cramer'sche Regel}
 \subsection{Quadratische Gleichungen}
 Allgemeine Form:
 $ ax^2 + bx + c = 0 $
