--- a/sections/07_Integralrechnung.tex
+++ b/sections/07_Integralrechnung.tex
@@ -1,3 +1,30 @@
+\pagebreak
+
 \section{Integralrechnung}
 
-$\int_{a}^{b} x^2 \,dx$
+\subsection{Unbestimmtes Integral}
+
+\begin{align*}
+   \int f(x) \,dx = F(x) + C
+\end{align*}
+
+\subsection{Bestimmtes Integral}
+
+\begin{align*}
+   \int_{a}^{b} f(x) \,dx = F_{(b)} -F_{(a)} = A
+\end{align*}
+
+
+\paragraph{Potenzregel}
+\begin{align*}
+   \int x^n \,dx = \frac{x^{n+1}}{n+1} + C
+\end{align*}
+\paragraph{Summenregel}
+\begin{align*}
+   \int [u(x) \pm v(x)] \,dx = \int u(x) \,dx \pm \int v(x) \,dx
+\end{align*}
+\paragraph{Productregel}
+\begin{align*}
+   \int u(x) \cdot v^{\prime}(x) \,dx = u(x) \cdot v(x) - \int u^{\prime}(x) \cdot v(x) \,dx
+\end{align*}
+
