--- a/FORMELSAMMLUNG.tex
+++ b/FORMELSAMMLUNG.tex
@@ -104,6 +104,7 @@ $\sum$ & Summenzeichen \\
 $\prod$ & Produktzeichen \\
 $ \in$ & Element von \\
 $ |$ & mit der Bedingung \\
+$ \infty$ & Unendlich \\
 \end{tabular}
 
 
