--- a/sections/07_Integralrechnung.tex
+++ b/sections/07_Integralrechnung.tex
@@ -23,7 +23,7 @@
 \begin{align*}
    \int [u(x) \pm v(x)] \,dx = \int u(x) \,dx \pm \int v(x) \,dx
 \end{align*}
-\paragraph{Productregel}
+\paragraph{Produktregel}
 \begin{align*}
    \int u(x) \cdot v^{\prime}(x) \,dx = u(x) \cdot v(x) - \int u^{\prime}(x) \cdot v(x) \,dx
 \end{align*}
