--- a/sections/08_Geometrie.tex
+++ b/sections/08_Geometrie.tex
@@ -71,6 +71,8 @@ Entsprechende Abschnitte auf den Parallelen stehen im gleichen Verhältnis.
 \subsubsection{Trapez}
 %TODO picture
 \begin{align*}
+    A &= \frac{a+b}{2} \cdot h = m \cdot h \\
+    m &= \frac{a+b}{2}
 \end{align*}
 
 \subsubsection{Kreis}
