--- a/sections/08_Geometrie.tex
+++ b/sections/08_Geometrie.tex
@@ -120,4 +120,32 @@ Entsprechende Abschnitte auf den Parallelen stehen im gleichen Verhältnis.
 \end{align*}
 
 \subsection{Trigonometrie}
+\subsubsection{Winkelfunktionen im rechtwinklichen Dreieck}
+%TODO picture
+\begin{align*}
+    \sin \alpha &= \frac{\textrm{Gegenkathete}}{\textrm{Hypotenuse}}  &= \frac{a}{c} \\
+    \cos \alpha &= \frac{\textrm{Ankathete}}{\textrm{Hypotenuse}}     &= \frac{b}{c} \\
+    \tan \alpha &= \frac{\textrm{Gegenkathete}}{\textrm{Ankathete}}   &= \frac{a}{b} \\
+    \cot \alpha &= \frac{\textrm{Ankathete}}{\textrm{Gegenkathete}}   & = \frac{b}{a} \\
+\end{align*}
+
+\subsubsection{Winkelfunktionen im spitz- und stumpfwinklichen Dreieck}
+%TODO picture
+\begin{align*}
+\end{align*}
+
+\paragraph{Sinussatz}
+%TODO picture
+\begin{align*}
+\end{align*}
+
+\paragraph{Kosinussatz}
+\begin{align*}
+\end{align*}
+
+\paragraph{Fläche eines Dreiecks}
+\begin{align*}
+\end{align*}
+
+
 \subsection{Geniometrie}
