--- a/sections/08_Geometrie.tex
+++ b/sections/08_Geometrie.tex
@@ -129,23 +129,56 @@ Entsprechende Abschnitte auf den Parallelen stehen im gleichen Verhältnis.
     \cot \alpha &= \frac{\textrm{Ankathete}}{\textrm{Gegenkathete}}   & = \frac{b}{a} \\
 \end{align*}
 
-\subsubsection{Winkelfunktionen im spitz- und stumpfwinklichen Dreieck}
-%TODO picture
+\paragraph{Trigonomische Beziehungen der Komplementwinkel}
 \begin{align*}
+    \sin \alpha &= \cos \beta  = \cos (90^\circ - \alpha) \\
+    \cos \alpha &= \sin \beta  = \sin (90^\circ - \alpha) \\
+    \tan \alpha &= \cot \beta  = \cot (90^\circ - \alpha) \\
+    \cot \alpha &= \tan \beta  = \tan (90^\circ - \alpha) \\
 \end{align*}
+
+
+\subsubsection{Winkelfunktionen im spitz- und stumpfwinklichen Dreieck}
+
 
 \paragraph{Sinussatz}
 %TODO picture
 \begin{align*}
+    a : b : c = \sin \alpha : \sin \beta :\sin \gamma \\
+    \frac{a}{\sin \alpha} = \frac{b}{\sin \beta} = \frac{c}{\sin \gamma}
 \end{align*}
 
 \paragraph{Kosinussatz}
+%TODO picture
 \begin{align*}
+    a^2 = b^2 + c^2 -2bc \cos \alpha \\
+    b^2 = c^2 + a^2 -2ca \cos \beta \\
+    c^2 = a^2 + b^2 -2ab \cos \gamma \\
 \end{align*}
 
 \paragraph{Fläche eines Dreiecks}
 \begin{align*}
+    A = \frac{1}{2} ab \sin \gamma = \frac{1}{2} bc \sin \alpha = \frac{1}{2} ac \sin \beta
 \end{align*}
 
 
 \subsection{Geniometrie}
+\subsubsection{Bogenmaß}
+%TODO picture
+\begin{align*}
+    1  \textrm{ rad} = \frac{180^\circ}{\pi}        \\
+    1 ^\circ = \frac{\pi}{180^\circ} \textrm{ rad}  \\
+    x = \frac{b}{r} = \frac{\pi}{180^\circ} \cdot \alpha^\circ \\
+\end{align*}
+
+\subsubsection{Grundbeziehungen}
+\begin{align*}
+    \sin^2 \alpha + \cos^2 \alpha = 1 \textrm{ (Trigonomischer Pythagoras)} \\
+    \tan \alpha = \frac{\sin \alpha}{\cos \alpha};
+    \cot \alpha = \frac{\cos \alpha}{\sin \alpha};
+    \tan \alpha \cdot \cot \alpha = 1
+\end{align*}
+
+\subsubsection{Winkelbeziehungen in den Quadranten}
+
+
